# mi-motor-grafico

./: CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cc  Camera.h  Mesh.cc  Mesh.h  ModelLoader.cc  ModelLoader.h  Object.cc  Object.h  Player.cc  Player.h  Renderer.cc  Renderer.h  Shader.cc  Shader.h  Teclado.cc  Teclado.h  Window.cc  Window.h  main.cc
